<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myseek="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dip" >

    <CheckBox
        android:id="@+id/isEnableCrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cropAuto"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="3"
            android:text="@string/automatic" />

        <TextView
            android:id="@+id/v5"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="3"
            android:text="5%" />

        <TextView
            android:id="@+id/v10"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="3"
            android:text="10%" />

        <TextView
            android:id="@+id/v15"
            style="@style/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minEms="3"
            android:text="15%" />
    </LinearLayout>

    <com.foobnix.pdf.info.view.CustomSeek
        android:id="@+id/marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        myseek:text="@string/top" >
    </com.foobnix.pdf.info.view.CustomSeek>

    <com.foobnix.pdf.info.view.CustomSeek
        android:id="@+id/marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        myseek:text="@string/bottom" >
    </com.foobnix.pdf.info.view.CustomSeek>

    <com.foobnix.pdf.info.view.CustomSeek
        android:id="@+id/marginLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        myseek:text="@string/left" >
    </com.foobnix.pdf.info.view.CustomSeek>

    <com.foobnix.pdf.info.view.CustomSeek
        android:id="@+id/marginRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        myseek:text="@string/right" >
    </com.foobnix.pdf.info.view.CustomSeek>

    <CheckBox
        android:id="@+id/isCropSymetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crop_borders_symmetrically" />

</LinearLayout>